# backend/docs/swagger.yaml
@@ -562,27 +562,6 @@ paths:
       summary: Create blog
       tags:
       - blog
-    put:
-      consumes:
-      - application/json
-      description: Updating blog(ID указывать НЕ НУЖНО)
-      parameters:
-      - description: Update blog
-        in: body
-        name: element
-        required: true
-        schema:
-          $ref: '#/definitions/model.Blog'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Update blog
-      tags:
-      - blog
   /blog/{id}:
     delete:
       description: Delete blog by its ID
@@ -618,6 +597,32 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: Get blog by ID
+      tags:
+      - blog
+    put:
+      consumes:
+      - application/json
+      description: Updating blog(ID указывать НЕ НУЖНО)
+      parameters:
+      - description: Blog ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update blog
+        in: body
+        name: element
+        required: true
+        schema:
+          $ref: '#/definitions/model.Blog'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Update blog
       tags:
       - blog
   /blog/upload:
